k8s/entities-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entities-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: entities-service
  template:
    metadata:
      labels:
        app: entities-service
    spec:
      containers:
        - name: entities-service
          image: ghcr.io/saekoaaa/storyvision-entities:0.1.0-bd5b117
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: entities-service
spec:
  selector:
    app: entities-service
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
