k8s/project-service-deployment.yaml
# project-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: project-service
  template:
    metadata:
      labels:
        app: project-service
    spec:
      containers:
        - name: project-service
          image: projects-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: project-service
spec:
  selector:
    app: project-service
  ports:
    - port: 4000
      targetPort: 4000
  type: ClusterIP
